Fixed overflow behavior on sidenav when using landscape oriented viewport

--- a/website/static/css/base.css
+++ b/website/static/css/base.css
@@ -33,7 +33,7 @@ header {
     position: fixed;
     top: 0;
 
-    height: 100vh;
+    height: 100%;
     width: 0;
 
     overflow-x: hidden;
