--- a/website/static/css/include/header.css
+++ b/website/static/css/include/header.css
@@ -1,11 +1,15 @@
 #header {
+    height: 100%;
+
     padding: 1rem;
 
     color: var(--txt-color);
     font-size: 2rem;
 
-    background-color: var(--nav-color);
     box-shadow: 0px 2px 5px 0px var(--sdw-color), 0px 1px 10px 0px var(--sdw-color), 0px 2px 4px -1px var(--sdw-color);
+    background-color: var(--nav-color);
+
+    overflow-y: scroll;
 }
 
 #header #toggle {
@@ -68,16 +72,13 @@
     margin: auto;
     padding: 1rem;
 
-
     color: var(--bg-color);
-    background-color: var(--btn-color);
-
     text-decoration: none;
 
     border: 1px solid var(--sdw-color);
     border-radius: 1rem;
-
     box-shadow: 0px 5px 0px 0px var(--sdw-color);
+    background-color: var(--btn-color);
 }
 
 #header #resume a:hover {
